# smited-watch

./: Cargo.toml  README.md  build.rs
.github/: FUNDING.yml
.github/workflows/: ci.yml
docs/: configuration.md  installation.md  patterns-cookbook.md
examples/: wrap.toml
proto/smited/v1/: smited.proto
src/: cli.rs  client.rs  config.rs  debounce.rs  exit.rs  lib.rs  main.rs  scan.rs  trigger.rs
src/wrap/: mod.rs  signal.rs  spawn.rs  stdin.rs  tee.rs
tests/: config_parsing.rs  debounce_semantics.rs  fake_daemon.rs  scan_matching.rs  wrap_passthrough.rs
